Dev fix bad paste

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -28,7 +28,7 @@ Commenting on the status of optimizations:
 
 > Flame graph for CPU usage shows pretty clearly that things are being dominated by IO now, so the biggest speedups left will definitely come from that front. ~10% GC, <1% validation, ~3.5% peer I/O, ~55% disk I/O, ~3% profiling cost, ~27% idle, and the rest in minor bits and bobs. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$U9ybkey7ppiqGR_K_BagIHwcoyNGTS-H91hEaXzghmI))
 
-> I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
+{ maybe add summary of module movements }
 
 { maybe add code/contributor stats }
 
@@ -38,9 +38,7 @@ In progress:
 - devs decided to use Schnorr signatures on TSPEND transactions
   - https://twitter.com/marco_peereboom/status/1283168367856300037
 
-{ Schnorr sounds exciting, any extra info is welcome! (why, how) }
-
-{ any other comments on Treasury are welcome too ofc }
+> I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
 
 If you have some idle hardware, you can help by [fuzz testing](https://github.com/degeri/dcrd-continuous-fuzz) dcrd.
 
