--- a/journal/202007.md
+++ b/journal/202007.md
@@ -263,6 +263,11 @@ News coverage secured by Monde PR:
 - An article in [Forbes](https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/#6477a6524aa3) featuring commentary by @jy-p on Bitcoin price volatility. The comments were also included in an article in [BitPush News](https://www.bitpush.news/articles/872764), which was syndicated to four news outlets including [Chain News](https://www.chainnews.com/zh-hant/articles/585418132268.htm)
 - @jy-p’s commentary in  [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) about the PayPal cryptocurrency rumors was featured in [Cointelegraph Italy](https://it.cointelegraph.com/news/paypal-letter-seems-to-confirm-crypto-capability-rumors) and [Corriere Romagna](https://www.corriereromagna.it/le-criptovalute-sbarcheranno-su-paypal-i-dubbi-degli-esperti/)
 
+Commenting on Monde PR's Phase Two Propoal being approved:
+>Thank you to everyone who voted and gave feedback. I’m very much looking forward to continuing the PR efforts and working with the community to raise awareness about the project. Lindsey McConaghy (@l1ndseymm)
+
+
+
 The subject of marketing saw a considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
 
 @checkmate has been stirring the pot of grassroots outreach and other ideas on reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
