Markets permabull stuff

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -359,14 +359,7 @@ Selected Twitter discussions:
 
 In July DCR was trading between USD 13.70-16.28 / BTC 0.00132-0.00177. The average daily rate was $15.13.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
-
-@PermabullNino [explored](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f) several new metrics derived from BTC and DCR realized caps that can reflect holder psychology and market over-/under-valuation.
-
-{ here or Network? }
-
-- https://medium.com/@permabullnino/decred-on-chain-mini-pub-2-hodl-power-d1cf8bafbffc
-- https://medium.com/@permabullnino/decred-on-chain-mini-pub-3-difficulty-ribbon-price-d644e470b989
+@PermabullNino started the new Decred On-Chain Mini Pub series where he explores one metric at a time. [Part 1](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f) introduces several new metrics derived from BTC and DCR realized caps that reflect holder psychology and market over-/undervaluation. [Part 2](https://medium.com/@permabullnino/decred-on-chain-mini-pub-2-hodl-power-d1cf8bafbffc) combines realized cap and % of supply locked in the ticket pool to derive two new metrics unique to DCR that matched historical tops and bottoms with good accuracy. [Part 3](https://medium.com/@permabullnino/decred-on-chain-mini-pub-3-difficulty-ribbon-price-d644e470b989) looks at Decred's difficulty ribbon and derives a new price metric against USD and BTC that has acted as a magnet for price in bear markets. As usual, all code to generate the charts is [open](https://github.com/permabullnino/nino_on_chain) on GitHub so that any interested researcher can reproduce the results or build on top of it.
 
 @Checmkate [observes](https://twitter.com/_Checkmatey_/status/1282465263011508225) that "There is a whole swathe of Decred onchain metrics that are lighting up right now".
 
