--- a/journal/202007.md
+++ b/journal/202007.md
@@ -227,6 +227,8 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 - Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw on the rumour side ? Added related news (check above)
 
+- Although originally XT.com [listed](https://nitter.snopyta.org/XTexchange/status/1062529195094339584) DCR in Nov 2018, now they have DCR trading to [USDT](https://twitter.com/XTexchange/status/1281867070653816832) and a leveraged mode.
+
 - Decred is finally no longer a "Bitcoin fork" on [CoinMarketCap](https://coinmarketcap.com/currencies/decred/).
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -339,7 +341,7 @@ Comm systems news:
 Selected Reddit posts:
 
 - @svitekpavel's [butterfly](https://www.reddit.com/r/decred/comments/htdsts/decred_artwork_new_repo_on_github_free_to_use/) DCR graphics repository got some love, it emerged from the [cocoon](https://www.reddit.com/r/decred/comments/ho1x71/dcr_bounty_create_decred_butterfly_svg_and/) of a DCR Bounty post he posted 9 days previously.
-- @Exitus [regretted](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/) his decision to go to a party, they weren't interested in DEX.
+- @Exitus [regretted](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/) his decision to go to a party, they weren't interested in DEX ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
 - Celebrating the community's [response](https://www.reddit.com/r/decred/comments/hp834o/a_sound_example_of_community_engagement/) to gaps where Decred can be mentioned.
 
 Selected Twitter discussions:
@@ -348,6 +350,7 @@ Selected Twitter discussions:
 - @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
 - @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448?s=20) on twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
 - @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401?s=20) that Messari may have missed a DAO.
+- @DecredAustralia [_coined_](https://twitter.com/DecredAustralia/status/1287541151105298432) the term [#DCRDiet](https://twitter.com/hashtag/DCRDiet) where people choose to spend their money on buying DCR over fast food and unnecessary items.
 
 ## Markets
 
@@ -374,6 +377,8 @@ More than 75 companies in the blockchain and cryptocurrency industry don't mind 
 Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time pull request from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now as created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [twitter](https://twitter.com/BlockCommons/status/1281930933889896449).
 
 When twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
+
+https://www.reddit.com/r/Monero/comments/i1fknt/ccs_results_monero_atomic_swaps_research/
 
 Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/1288372785098764288) that their marketing database had been breached, with 1M email addresses being leaked along with the full names and postal addresses of 9,500 customers.
 
