--- a/journal/202007.md
+++ b/journal/202007.md
@@ -146,24 +146,19 @@ Welcome to new first time contributors with code merged to master: @Kifen ([dcrw
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [@rstaudt2](https://github.com/rstaudt2) (development).
 
-{welcome new corporate contractors with short intros, if any}
+Community stats as of Aug 1:
 
-{updates from existing contractors}
+- Twitter followers: 40,637 (+120)
+- Reddit subscribers: 9,875 (+21)
+- Matrix #general users: 124 (-498) \*
+- Discord users: 1,372 (+84)
+- Telegram users: 2,520 (-87)
+- YouTube subscribers: 4,150 (+40), views: 151K (+3K)
+- Facebook followers: 3,655 (+0), likes: 3,305 (-6)
+- LinkedIn followers: 862 (+26)
+- GitHub dcrd stars: 550 (+1), forks: 240 (-1)
 
-{interviews about people}
-
-Community stats as of {}:
-
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix #general users: {} (+{})
-- Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{}), views: {} (+{})
-- Facebook followers: {} (+{}), likes: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+\* Chat room upgrade on Jul 9 revealed the number of users active in 23 days before the Aug 1 snapshot.
 
 ## Governance
 
