thedecreddigest not down, move to Media

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -132,7 +132,6 @@ godcr is an upcoming cross-platform pure-Go desktop SPV wallet for Decred. See [
 
 Other:
 
-- sad news: the venerable [thedecreddigest.com](https://thedecreddigest.com/) website is down
 - [decredpower.com](https://decredpower.com/) migrated to [Hugo](https://github.com/planetdecred/decredpower/pull/19) which is more flexible and easier to update. It also features a fresh new theme (don't worry, [retro](https://decredpower.com/retro/) theme is still there!).
 - { shall we mention dcrextdata update @raedah? }
 - there is a pending pull request adding [Decred support](https://github.com/trezor/trezor-utxo-lib/pull/9) to Trezor's javascript library
@@ -273,6 +272,8 @@ Upcoming:
 ## Media
 
 {notable community efforts}
+
+If you notice that the venerable [thedecreddigest.com](https://thedecreddigest.com/) is down, do not panic, it has moved to [thedecreddigest.org](https://thedecreddigest.org/).
 
 {ratings news}
 
