--- a/journal/202007.md
+++ b/journal/202007.md
@@ -187,13 +187,9 @@ Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue0
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: [July's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kc0s5ehh-kdbsef8t&scale=linear&bin=block&axis=time) opened at ~394 Ph/s and closed ~307 Ph/s, bottoming at 307 Ph/s and peaking at 582 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of Aug 1 (approximate): Poolin 33%, UUPool 25.8%,  lab.antpool.com 9.6%, BTC.com 3.4%, Luxor .90%, F2Pool 0.78%, BeePool 0.09%, CoinMine 0.03%, Suprnova 0.02% and others ~26.29%.
+Hashrate: [July's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kc0s5ehh-kdbsef8t&scale=linear&bin=block&axis=time) opened at ~394 Ph/s and closed ~307 Ph/s, bottoming at 307 Ph/s and peaking at 582 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of Aug 1 (approximate): Poolin 33%, UUPool 26%,  lab.antpool.com 9.6%, BTC.com 3.4%, Luxor 0.9%, F2Pool 0.8%, BeePool 0.09%, CoinMine 0.03%, Suprnova 0.02% and others ~26%.
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 144.33 DCR (+4.93). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kc0wcecw-kdbow68z&bin=window&axis=time&visibility=true-false) varied between 137.1-155.4 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kbz4dza5-kd9wj3go&bin=day&axis=time&visibility=true-false) was 5.78-5.87 million DCR, which corresponded to 49.09-49.8% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kbz4dza5-kd9wj3go&bin=day&axis=time&visibility=true-false) in PoS.
-
-{ hint: second source for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
-
-{recap of ticket price action if it was interesting}
+Staking: [30-day average](https://dcrstats.com/) ticket price was 144.3 DCR (+4.9). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kc0s5ehh-kdbsef8t&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 137.1-155.5 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) was 5.75-5.88 million DCR, which corresponded to 48.98-50.06% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) in PoS.
 
 { hint: consider keeping Block size and Transactions sections every 2nd or 3rd month, unless there is something interesting to report }
 
@@ -201,11 +197,7 @@ Block size: This month, the blockchain size grew by {n} MB. [Block size](https:/
 
 Transactions: In July, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
 
-{ hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
-
-Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1593554400000&to=1596232799000) there was an average of 134 public listening nodes and 242 total nodes per dcr.farm. Average version distribution for July: 51% dcrd v1.5.1, 10% dcrd v1.5, 6% dcrd v1.6 dev builds, 5% dcrd v1.5 dev and RC builds, 1.3% dcrd v1.4, 7% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, 18% others.
-
-{any interesting analysis or events in the network}
+Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1593561600000&to=1596240000000) there was an average of 134 public listening nodes and 241 total nodes per dcr.farm. Average version distribution for July: 51% dcrd v1.5.1, 10% dcrd v1.5, 6% dcrd v1.6 dev builds, 5% dcrd v1.5 dev and RC builds, 1.3% dcrd v1.4, 7% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, and 18% others.
 
 ## Integrations
 
