--- a/journal/202007.md
+++ b/journal/202007.md
@@ -222,28 +222,20 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{overview of outreach/communications/marketing/PR activity for past month and any short-term plans}
+Monde PR's achievements for July:
 
-{ might be PR work: }
-
-- https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/
-
-
-Monde PR’s achievements for July:
-
-- Created and pitched four story ideas to personal finance, business, crypto and tech publications
-- Secured two email Q&As with crypto and mainstream publications
+- created and pitched 4 story ideas to personal finance, business, crypto and tech publications
+- secured two email Q&As with crypto and mainstream publications
 
 News coverage secured by Monde PR:
 
-- A thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/07/self-funding-cryptocurrencies-recession/) by @RichardRed about the resiliency of self-funding cryptocurrencies during the recession. 
-- An article in [Forbes](https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/#6477a6524aa3) featuring commentary by @jy-p on Bitcoin price volatility. The comments were also included in an article in [BitPush News](https://www.bitpush.news/articles/872764), which was syndicated to four news outlets including [Chain News](https://www.chainnews.com/zh-hant/articles/585418132268.htm)
-- @jy-p’s commentary in  [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) about the PayPal cryptocurrency rumors was featured in [Cointelegraph Italy](https://it.cointelegraph.com/news/paypal-letter-seems-to-confirm-crypto-capability-rumors) and [Corriere Romagna](https://www.corriereromagna.it/le-criptovalute-sbarcheranno-su-paypal-i-dubbi-degli-esperti/)
+- a thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/07/self-funding-cryptocurrencies-recession/) by @richardred about the resiliency of self-funding cryptocurrencies during the recession
+- an article in [Forbes](https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/) featuring commentary by @jy-p on Bitcoin price volatility. The comments were also included in an article in [BitPush News](https://www.bitpush.news/articles/872764), which was syndicated to 4 news outlets including [Chain News](https://www.chainnews.com/zh-hant/articles/585418132268.htm).
+- @jy-p's commentary in  [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) about the PayPal cryptocurrency rumors was featured in [Cointelegraph Italy](https://it.cointelegraph.com/news/paypal-letter-seems-to-confirm-crypto-capability-rumors) and [Corriere Romagna](https://www.corriereromagna.it/le-criptovalute-sbarcheranno-su-paypal-i-dubbi-degli-esperti/).
 
 Commenting on Monde PR's Phase Two Propoal being approved:
->Thank you to everyone who voted and gave feedback. I’m very much looking forward to continuing the PR efforts and working with the community to raise awareness about the project. Lindsey McConaghy (@l1ndseymm)
 
-
+> Thank you to everyone who voted and gave feedback. I'm very much looking forward to continuing the PR efforts and working with the community to raise awareness about the project. Lindsey McConaghy (@l1ndseymm)
 
 The subject of marketing saw a considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
 
