--- a/journal/202007.md
+++ b/journal/202007.md
@@ -233,23 +233,23 @@ News coverage secured by Monde PR:
 
 - a thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/07/self-funding-cryptocurrencies-recession/) by @richardred about the resiliency of self-funding cryptocurrencies during the recession
 - an article in [Forbes](https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/) featuring commentary by @jy-p on Bitcoin price volatility. The comments were also included in an article in [BitPush News](https://www.bitpush.news/articles/872764), which was syndicated to 4 news outlets including [Chain News](https://www.chainnews.com/zh-hant/articles/585418132268.htm).
-- @jy-p's commentary in  [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) about the PayPal cryptocurrency rumors was featured in [Cointelegraph Italy](https://it.cointelegraph.com/news/paypal-letter-seems-to-confirm-crypto-capability-rumors) and [Corriere Romagna](https://www.corriereromagna.it/le-criptovalute-sbarcheranno-su-paypal-i-dubbi-degli-esperti/).
+- @jy-p's commentary in  [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) about the PayPal cryptocurrency rumors was featured in [Cointelegraph Italy](https://it.cointelegraph.com/news/paypal-letter-seems-to-confirm-crypto-capability-rumors) and [Corriere Romagna](https://www.corriereromagna.it/le-criptovalute-sbarcheranno-su-paypal-i-dubbi-degli-esperti/)
 
 Commenting on Monde PR's Phase Two Propoal being approved:
 
 > Thank you to everyone who voted and gave feedback. I'm very much looking forward to continuing the PR efforts and working with the community to raise awareness about the project. Lindsey McConaghy (@l1ndseymm)
 
-The subject of marketing saw a considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
+The subject of marketing saw a considerable discussion on Reddit and Matrix, and specifically what role the Treasury of a decentralized project like Decred should play in this.
 
-@checkmate has been stirring the pot of grassroots outreach and other ideas on reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
+@Checkmate has been stirring the pot of grassroots outreach and other ideas on Reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
 
-* @mrbulb posted a Workshop Wednesday, inviting people to explore the 4 key stages of narrative development with him.
-* Skepticism Sunday 5 July considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3?utm_source=share&utm_medium=web2x) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Comes with: [itemized](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3f3wo) [debunking](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3fcd6) by @bee.
-* FTF Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing dcr data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
-* FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
-* @Noah shared a braindroplet about a Dapp for transparent governance with Politeia.
-* FTF Jul 24 - Content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
-* Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday, July 27 @checkmate dropped part 2 of the Grassroots Marketing Discussion -  [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s) into the mix to share his perspective, and led to Praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy) his new identity. 
+- @mrbulb posted a Workshop Wednesday, inviting people to explore the 4 key stages of narrative development with him.
+- Skepticism Sunday Jul 5 considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3/) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21/) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Multiple surprising claims were questioned by @bee and [debunked](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3j2j6/) by @jy-p.
+- Forward Thinking Friday (FTF) Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing DCR data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
+- FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
+- @Haon shared a braindroplet about a dapp for transparent governance with Politeia.
+- FTF Jul 24 focused on content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
+- Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday, July 27 @Checkmate dropped part 2 of the Grassroots Marketing Discussion - [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought @Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s/) into the mix to share his perspective, and led to @praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy/) his new identity.
 
 ## Events
 
