--- a/journal/202007.md
+++ b/journal/202007.md
@@ -373,6 +373,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, richardred
-- reviews and feedback: davecgh, jholdstock
+- writing and editing: bee, degeri, l1ndseymm, richardred
+- reviews and feedback: davecgh, emiliomann, jholdstock, jz
 - title image: {}
