--- a/journal/202007.md
+++ b/journal/202007.md
@@ -232,7 +232,7 @@ The subject of marketing saw a considerable discussion on Reddit and Matrix, and
 - Skepticism Sunday Jul 5 considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3/) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21/) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Multiple surprising claims were questioned by @bee and [debunked](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3j2j6/) by @jy-p.
 - Forward Thinking Friday (FTF) Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing DCR data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
 - FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
-- @Haon [shared](https://www.reddit.com/r/decred/comments/hviup5/brainstorm_ideas_about_the_future_of_politeia/) a braindroplet about a dapp for transparent governance with Politeia.
+- @Haon shared a [concept](https://www.reddit.com/r/decred/comments/hviup5/brainstorm_ideas_about_the_future_of_politeia/) of a dapp for transparent governance based on Politeia.
 - FTF Jul 24 focused on content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
 - Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday, July 27 @Checkmate dropped part 2 of the Grassroots Marketing Discussion - [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought @Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s/) into the mix to share his perspective, and led to @praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy/) his new identity.
 
