--- a/journal/202007.md
+++ b/journal/202007.md
@@ -255,13 +255,20 @@ Commenting on Monde PR's Phase Two Propoal being approved:
 
 Attended:
 
-- Jul 2 { Legal Hackers Colombia, Legaltech Talk #7 }
+- Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia about Fintech and cryptocurrencies in Latam. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
+- Jul 3 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1278478260716933120) - Internet. @elian joined the panel on blockchain governance of Decred and Dash with [@anibalcripto](https://twitter.com/anibalcripto) (Venezuelan crypto influencer), [@EzioRed](https://twitter.com/EzioRed) (editor of Cointelegraph in Spanish) and [@ernestocontrer](https://twitter.com/ernestocontrer). It was a good opportunity to connect with the Venezuelan ecosystem.
+- Jul 8 - [Youth Entrepreneurship](https://twitter.com/in_insaf/status/1280771474966675456) - Internet. The event was organized by the Moroccan Organization of Young Decision Makers, where @arij talked about blockchain technology and how it will change the industrial sector. The presentation took one hour, plus half an hour of Q&A. At the begining there were just 16 participants but more have joined in the middle of the webinar. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200708-virtual-training-academy-internet.md))
+- Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from [Clara Nobre](https://www.youtube.com/watch?v=AD84kjsS50w), [Rafaela Romano](https://www.youtube.com/watch?v=m4zxnq7RJoQ), and [Fernando Guisso](https://www.youtube.com/watch?v=CkQaUhlPTKA). { @emiliomann what the talks were about? }
+- Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined the conversation about women in crypto, software and money. The event was sponsored by Binance. ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
+- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish. { @elian did it happen? }
+- Jul 22-23 - [Blockchain Land](https://www.blockchain-land.tv/) - Internet. @pablito and @camilolwi were on the panel on [DAO](https://www.blockchain-land.tv/eventos/comunidades-con-codigos-el-rol-de-las-daos-en-la-blockchain-gustavo-segovia-mariano-di-pietrantonio-pablo-labarta-camilo-rodriguez/) with MakerDAO and Colony. On the following day @adcade gave a [talk](https://www.blockchain-land.tv/eventos/las-criptomonedas-son-productos-digitales-quien-las-mantiene-ana-chavez/) "Who pays for cryptocurrency development?", a 20 min segment on how to contribute to Decred. (full 12-hour [video](https://www.youtube.com/watch?v=On2zYc7BrvI), @adcade's [talk](https://www.youtube.com/watch?v=iot1tkctSRI))
+- Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams and how to prevent them. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
+- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina. Decred was a sponsor. { @elian did it happen? }
+- Jul 31 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/272243922/) - Internet. eSizeDave, Checkmate and Zohand hosted this event in Zoom and updated the community on Decred's latest developments, upcoming releases, general market analysis and insights from Decred's latest on-chain analytics findings.
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- { any? }
 
 ## Media
 
