add info from adcade

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -260,10 +260,11 @@ Attended:
 - Jul 8 - [Youth Entrepreneurship](https://twitter.com/in_insaf/status/1280771474966675456) - Internet. The event was organized by the Moroccan Organization of Young Decision Makers, where @arij talked about blockchain technology and how it will change the industrial sector. The presentation took one hour, plus half an hour of Q&A. At the begining there were just 16 participants but more have joined in the middle of the webinar. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200708-virtual-training-academy-internet.md))
 - Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from [Clara Nobre](https://www.youtube.com/watch?v=AD84kjsS50w), [Rafaela Romano](https://www.youtube.com/watch?v=m4zxnq7RJoQ), and [Fernando Guisso](https://www.youtube.com/watch?v=CkQaUhlPTKA). { @emiliomann what the talks were about? }
 - Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined the conversation about women in crypto, software and money. The event was sponsored by Binance. ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
-- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish. { @elian did it happen? }
+- Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss Decred and cryptocurrencies.
+- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish.
 - Jul 22-23 - [Blockchain Land](https://www.blockchain-land.tv/) - Internet. @pablito and @camilolwi were on the panel on [DAO](https://www.blockchain-land.tv/eventos/comunidades-con-codigos-el-rol-de-las-daos-en-la-blockchain-gustavo-segovia-mariano-di-pietrantonio-pablo-labarta-camilo-rodriguez/) with MakerDAO and Colony. On the following day @adcade gave a [talk](https://www.blockchain-land.tv/eventos/las-criptomonedas-son-productos-digitales-quien-las-mantiene-ana-chavez/) "Who pays for cryptocurrency development?", a 20 min segment on how to contribute to Decred. (full 12-hour [video](https://www.youtube.com/watch?v=On2zYc7BrvI), @adcade's [talk](https://www.youtube.com/watch?v=iot1tkctSRI))
 - Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams and how to prevent them. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
-- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina. Decred was a sponsor. { @elian did it happen? }
+- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina. Decred was a sponsor.
 - Jul 31 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/272243922/) - Internet. eSizeDave, Checkmate and Zohand hosted this event in Zoom and updated the community on Decred's latest developments, upcoming releases, general market analysis and insights from Decred's latest on-chain analytics findings.
 
 Upcoming:
@@ -287,10 +288,12 @@ Selected articles:
 - Decred On-Chain Mini Pub 1: Relative MVRV Ratio by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f))
 - Decred On-Chain Mini Pub 2: HODL Power by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-2-hodl-power-d1cf8bafbffc))
 - Decred On-Chain Mini Pub 3: Difficulty Ribbon Price ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-3-difficulty-ribbon-price-d644e470b989))
+- More than 20 developers have contributed to Decred so far this year by Fernando Quirós (Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/more-than-20-developers-have-contributed-to-decred-so-far-this-year))
 
 Translations:
 
 - Why we need Decred: An inclusive approach to sound money - [in Spanish](https://medium.com/decred-es/porque-decred-es-necesario-un-enfoque-inclusivo-sobre-el-dinero-duradero-b8235fb312f3) by @adcade
+- The Federal Reserve: A blatantly rigged game - [in Spanish](https://medium.com/decred-es/la-reserva-federal-un-sistema-realmente-manipulado-d40dedcc619b) by @adcade
 
 Videos:
 
@@ -393,5 +396,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, emiliomann, jholdstock, jz
+- reviews and feedback: adcade, davecgh, emiliomann, jholdstock, jz
 - title image: {}
