Events add BR talk titles

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -258,7 +258,7 @@ Attended:
 - Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia about Fintech and cryptocurrencies in Latam. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
 - Jul 3 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1278478260716933120) - Internet. @elian joined the panel on blockchain governance of Decred and Dash with [@anibalcripto](https://twitter.com/anibalcripto) (Venezuelan crypto influencer), [@EzioRed](https://twitter.com/EzioRed) (editor of Cointelegraph in Spanish) and [@ernestocontrer](https://twitter.com/ernestocontrer). It was a good opportunity to connect with the Venezuelan ecosystem.
 - Jul 8 - [Youth Entrepreneurship](https://twitter.com/in_insaf/status/1280771474966675456) - Internet. The event was organized by the Moroccan Organization of Young Decision Makers, where @arij talked about blockchain technology and how it will change the industrial sector. The presentation took one hour, plus half an hour of Q&A. At the begining there were just 16 participants but more have joined in the middle of the webinar. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200708-virtual-training-academy-internet.md))
-- Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from [Clara Nobre](https://www.youtube.com/watch?v=AD84kjsS50w), [Rafaela Romano](https://www.youtube.com/watch?v=m4zxnq7RJoQ), and [Fernando Guisso](https://www.youtube.com/watch?v=CkQaUhlPTKA). { @emiliomann what the talks were about? }
+- Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from Clara Nobre ("[Open Source and cryptocurrencies](https://www.youtube.com/watch?v=AD84kjsS50w): uniting community and bytes that are worth gold!"), Rafaela Romano ("[Blockchain monetization](https://www.youtube.com/watch?v=m4zxnq7RJoQ): one coin for your thoughts"), and Fernando Guisso ("[Instant payments](https://www.youtube.com/watch?v=CkQaUhlPTKA) with cryptocurrencies").
 - Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined the conversation about women in crypto, software and money. The event was sponsored by Binance. ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
 - Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss Decred and cryptocurrencies.
 - Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish.
