Media fix credit

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -287,7 +287,7 @@ Selected articles:
 Translations:
 
 - Why we need Decred: An inclusive approach to sound money - [in Spanish](https://medium.com/decred-es/porque-decred-es-necesario-un-enfoque-inclusivo-sobre-el-dinero-duradero-b8235fb312f3) by @adcade
-- The Federal Reserve: A blatantly rigged game - [in Spanish](https://medium.com/decred-es/la-reserva-federal-un-sistema-realmente-manipulado-d40dedcc619b) by @adcade, [in Portuguese](https://stakey.club/translated/federal-reserve/) by @mm
+- The Federal Reserve: A blatantly rigged game - [in Spanish](https://medium.com/decred-es/la-reserva-federal-un-sistema-realmente-manipulado-d40dedcc619b) by @francov\_, [in Portuguese](https://stakey.club/translated/federal-reserve/) by @mm
 
 Videos:
 
