--- a/journal/202007.md
+++ b/journal/202007.md
@@ -287,7 +287,8 @@ Selected articles:
 Translations:
 
 - Why we need Decred: An inclusive approach to sound money - [in Spanish](https://medium.com/decred-es/porque-decred-es-necesario-un-enfoque-inclusivo-sobre-el-dinero-duradero-b8235fb312f3) by @adcade
-- The Federal Reserve: A blatantly rigged game - [in Spanish](https://medium.com/decred-es/la-reserva-federal-un-sistema-realmente-manipulado-d40dedcc619b) by @francov\_, [in Portuguese](https://stakey.club/translated/federal-reserve/) by @mm
+- The Federal Reserve: A blatantly rigged game - [in Arabic](https://insaf01.github.io/decred-arabic/articles/the-federal-reserve-a-blatantly-rigged-game.html) by @arij (corrections by @Abdulrahman4 who has been reviewing most Arabic texts so far - thanks!), [in Portuguese](https://stakey.club/translated/federal-reserve/) by @mm, and [in Spanish](https://medium.com/decred-es/la-reserva-federal-un-sistema-realmente-manipulado-d40dedcc619b) by @francov\_
+- Decred Journal June 2020 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, review by @Abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_, review by @pablito). Thank you all for your persistence!
 
 Videos:
 
