--- a/journal/202007.md
+++ b/journal/202007.md
@@ -310,6 +310,8 @@ Games:
 
 - coli, of #trading fame, has been adding Stakey skins to games, including [Stakey Jump](https://www.reddit.com/r/decred/comments/hk83uh/stakey_jump/)
 
+@svitekpavel [announced](https://www.reddit.com/r/decred/comments/htdsts/decred_artwork_new_repo_on_github_free_to_use/) a new [repository](https://github.com/Decred-Bulls/decred-artwork) to collect Decred-related artwork that is free to use and tries include original source files (AI, PSD, ..) so the artwork is editable or reusable in further creations. The first piece to be included is the butterfly DCR graphics by u/BitartZone, which emerged from the [cocoon](https://www.reddit.com/r/decred/comments/ho1x71/dcr_bounty_create_decred_butterfly_svg_and/) of a DCR Bounty post.
+
 ## Community Discussions
 
 Comm systems news:
@@ -323,7 +325,6 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- @svitekpavel's [butterfly](https://www.reddit.com/r/decred/comments/htdsts/decred_artwork_new_repo_on_github_free_to_use/) DCR graphics repository got some love, it emerged from the [cocoon](https://www.reddit.com/r/decred/comments/ho1x71/dcr_bounty_create_decred_butterfly_svg_and/) of a DCR Bounty post he posted 9 days previously.
 - @Exitus [regretted](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/) his decision to go to a party, they weren't interested in DEX ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
 - Celebrating the community's [response](https://www.reddit.com/r/decred/comments/hp834o/a_sound_example_of_community_engagement/) to gaps where Decred can be mentioned.
 
@@ -331,8 +332,8 @@ Selected Twitter discussions:
 
 - https://twitter.com/decredcitizen/status/1283145371317940229 { new interesting twitter account }
 - @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
-- @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448?s=20) on twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
-- @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401?s=20) that Messari may have missed a DAO.
+- @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448) on twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
+- @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401) that Messari may have missed a DAO.
 - @DecredAustralia [_coined_](https://twitter.com/DecredAustralia/status/1287541151105298432) the term [#DCRDiet](https://twitter.com/hashtag/DCRDiet) where people choose to spend their money on buying DCR over fast food and unnecessary items.
 
 ## Markets
