--- a/journal/202007.md
+++ b/journal/202007.md
@@ -325,16 +325,16 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- @Exitus [regretted](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/) his decision to go to a party, they weren't interested in DEX ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
+- "[This party sucks](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/). I wish I was at home staking Decred" - @Exitus shared his painful experience of going to the wrong party ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
 - Celebrating the community's [response](https://www.reddit.com/r/decred/comments/hp834o/a_sound_example_of_community_engagement/) to gaps where Decred can be mentioned.
 
 Selected Twitter discussions:
 
-- https://twitter.com/decredcitizen/status/1283145371317940229 { new interesting twitter account }
 - @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
 - @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448) on twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
 - @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401) that Messari may have missed a DAO.
 - @DecredAustralia [_coined_](https://twitter.com/DecredAustralia/status/1287541151105298432) the term [#DCRDiet](https://twitter.com/hashtag/DCRDiet) where people choose to spend their money on buying DCR over fast food and unnecessary items.
+- Check out [@decredcitizen](https://twitter.com/decredcitizen), a new Twitter account with the right Decred vibe in it. Each tweet is sharp and balanced. "deCred is not they, he, she, you. deCred is I, me, we."
 
 ## Markets
 
