--- a/journal/202007.md
+++ b/journal/202007.md
@@ -255,16 +255,16 @@ Commenting on Monde PR's Phase Two Propoal being approved:
 
 Attended:
 
-- Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia and BlockchainEx Colombia about Fintech regulation, the cryptocurrency ecosystem in Latam, challengues and opportunities for innovation. Questions from the audience were related to regulatory enviroments in Mexico, Argentina and Colombia, opportunities for collaboration and sources of education. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
+- Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia and BlockchainEx Colombia about Fintech regulation, the cryptocurrency ecosystem in Latam, and challenges and opportunities for innovation. Questions from the audience were related to regulatory environments in Mexico, Argentina and Colombia, opportunities for collaboration and sources of education. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
 - Jul 3 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1278478260716933120) - Internet. @elian joined the panel on blockchain governance of Decred and Dash with [@anibalcripto](https://twitter.com/anibalcripto) (Venezuelan crypto influencer), [@EzioRed](https://twitter.com/EzioRed) (editor of Cointelegraph in Spanish) and [@ernestocontrer](https://twitter.com/ernestocontrer) (Dash Core Group BizDev). It was a good opportunity to connect with the Venezuelan ecosystem and showcase the differences between Decred and Dash.
 - Jul 8 - [Youth Entrepreneurship](https://twitter.com/in_insaf/status/1280771474966675456) - Internet. The event was organized by the Moroccan Organization of Young Decision Makers, where @arij talked about blockchain technology and how it will change the industrial sector. The presentation took one hour, plus half an hour of Q&A. At the begining there were just 16 participants but more have joined in the middle of the webinar. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200708-virtual-training-academy-internet.md))
 - Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from Clara Nobre ("[Open Source and cryptocurrencies](https://www.youtube.com/watch?v=AD84kjsS50w): uniting community and bytes that are worth gold!"), Rafaela Romano ("[Blockchain monetization](https://www.youtube.com/watch?v=m4zxnq7RJoQ): one coin for your thoughts"), and Fernando Guisso ("[Instant payments](https://www.youtube.com/watch?v=CkQaUhlPTKA) with cryptocurrencies").
-- Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined woman from crypto communities in Mexico, Chile and Venezuela, the panel discussed cryptocurrency projects, crypto culture, personal stories of how each one got started, tips on navigating the industry and some discussion of the nuances of gender in crypto. The event was sponsored by Binance and hosted by [@anibalcripto](https://twitter.com/anibalcripto) and [@EzioRed](https://twitter.com/EzioRed). ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
-- Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss cryptocurrencies and the three main characteristics of Decred: security, adaptability and sustainability. Around each characteristic explored, some paralels where drawned with current laws in Mexico, and how crypto can render them useless. Where and how to buy Decred was also examined.
-- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams, what kind of of scam sxist, how to spot them, how to prevent and a summary of the largest hacks in the cryptocurrency industry. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) [Livestream on youtube](https://www.youtube.com/watch?v=IAlXrrYCYcs&t) in Spanish.
+- Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined women from crypto communities in Mexico, Chile and Venezuela. The panel discussed cryptocurrency projects, crypto culture, personal stories of how each one got started, tips on navigating the industry and some discussion of the nuances of gender in crypto. The event was sponsored by Binance and hosted by [@anibalcripto](https://twitter.com/anibalcripto) and [@EzioRed](https://twitter.com/EzioRed). ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
+- Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss cryptocurrencies and the three main characteristics of Decred: security, adaptability and sustainability. Around each characteristic explored, some parallels were drawn with current laws in Mexico, and how crypto can render them useless. Where and how to buy Decred was also examined.
+- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams, what kinds of of scams exist, how to spot them, how to prevent and a summary of the largest hacks in the cryptocurrency industry. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish and [livestreamed](https://www.youtube.com/watch?v=IAlXrrYCYcs) on YouTube.
 - Jul 22-23 - [Blockchain Land](https://www.blockchain-land.tv/) - Internet. @pablito and @camilolwi were on the panel on [DAO](https://www.blockchain-land.tv/eventos/comunidades-con-codigos-el-rol-de-las-daos-en-la-blockchain-gustavo-segovia-mariano-di-pietrantonio-pablo-labarta-camilo-rodriguez/) with MakerDAO and Colony. On the following day @adcade gave a [talk](https://www.blockchain-land.tv/eventos/las-criptomonedas-son-productos-digitales-quien-las-mantiene-ana-chavez/) "Who pays for cryptocurrency development?", a 20 min segment on how to contribute to Decred. (full 12-hour [video](https://www.youtube.com/watch?v=On2zYc7BrvI), @adcade's [talk](https://www.youtube.com/watch?v=iot1tkctSRI))
-- Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams, how to prevent them and to store safely cryptocurrencies. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
-- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina, gathering the community of developers, entrepreneurs, investors and general public, Decred was sponsor of the event.
+- Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams, how to prevent them and how to store cryptocurrencies safely. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
+- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina, gathering the community of developers, entrepreneurs, investors and the general public. Decred was sponsor of the event.
 - Jul 31 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/272243922/) - Internet. eSizeDave, Checkmate and Zohand hosted this event in Zoom and updated the community on Decred's latest developments, upcoming releases, general market analysis and insights from Decred's latest on-chain analytics findings.
 
 Upcoming:
@@ -398,6 +398,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, l1ndseymm, richardred
+- writing and editing: bee, elian, degeri, l1ndseymm, richardred
 - reviews and feedback: adcade, davecgh, emiliomann, jholdstock, jz
 - title image: {}
