Dev dcrdex drop nomatch

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -105,7 +105,6 @@ vspd has now been deployed on testnet by a couple of existing VSP operators, dep
 - [smart fees](https://github.com/decred/dcrdex/pull/505): orders reserve enough for a "max fee rate" in case BTC fees are high when the order is filled, but the optimal network fee at match time is used for the swap contract transaction
 - server [ban](https://github.com/decred/dcrdex/pull/469) and [unban](https://github.com/decred/dcrdex/pull/479) endpoints
 - infrastructure for [upgrading](https://github.com/decred/dcrdex/pull/448) client database
-- added [nomatch](https://github.com/decred/dcrdex/pull/535) notification { how does it work? notable for end users? }
 - multiple bug fixes, testing improvements, and UI tweaks
 
 [dcrandroid](https://github.com/planetdecred/dcrandroid):
@@ -397,5 +396,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, richardred
-- reviews and feedback: adcade, davecgh, emiliomann, jholdstock, jz
+- reviews and feedback: adcade, buck54321, davecgh, emiliomann, jholdstock, jz
 - title image: {}
