Dev dcrdex process chappjc info

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -101,25 +101,17 @@ vspd has now been deployed on testnet by a couple of existing VSP operators, dep
 
 [dcrdex](https://github.com/decred/dcrdex):
 
-{ from chappjc, process }
-
-- client browser now provides a complete wallet reconfiguration dialog https://github.com/decred/dcrdex/pull/533
-- smart fee rate handling. To minimize the on chain mining fees required to the optimal rate at swap time (not order time), smart fee estimates used. To deal with orders needing to lock the coins required to fund the swaps, which can occur far after order placement when on-chain fees have changed, orders must reserve enough for a "max fee rate". https://github.com/decred/dcrdex/pull/505
-- improved wallet locking of coins that fund orders, particularly for chained swaps https://github.com/decred/dcrdex/pull/525
-- additional server administration functions https://github.com/decred/dcrdex/pull/555 (notify), https://github.com/decred/dcrdex/pull/534 (bcast), https://github.com/decred/dcrdex/pull/479 (unban), and https://github.com/decred/dcrdex/pull/469 (ban)
-- orders with revoked (failed) matches, the order is automatically unbooked and the clients are notified https://github.com/decred/dcrdex/pull/475
-- client's DB scheme is now versioned, with an upgrade infrastructure for future changes. https://github.com/decred/dcrdex/pull/448
-- the client now automatically resubscribes to the order book feed after a reconnection with the server. https://github.com/decred/dcrdex/commit/cde7fb559fc9ebe6447c17bbe3184ddf1a1d14aa
-- client command line interface now provides the order book: https://github.com/decred/dcrdex/pull/496
-- client prevents accidental shutdown with active orders and swaps: https://github.com/decred/dcrdex/pull/527
-- client browser interface polish https://github.com/decred/dcrdex/pull/560
+- client browser now provides a complete wallet [reconfiguration](https://github.com/decred/dcrdex/pull/533) dialog
+- [smart fee rate](https://github.com/decred/dcrdex/pull/505) handling. To minimize the on-chain mining fees required for the optimal rate at swap time (not order time), smart fee estimates are used. To deal with orders needing to lock the coins required to fund the swaps, which can occur far after order placement when on-chain fees have changed, orders must reserve enough for a "max fee rate". In other words, orders reserve enough for a "max fee rate" in case BTC fees are high when the order is filled, but the optimal network fee at match time is used for the swap contract transaction. (and here's a [tweet](https://twitter.com/chappjc/status/1280510447515586565) for outreach people)
+- improved wallet [locking of coins](https://github.com/decred/dcrdex/pull/525) that fund orders, particularly for chained swaps
+- additional server administration functions: [ban](https://github.com/decred/dcrdex/pull/469), [unban](https://github.com/decred/dcrdex/pull/479), [notify](https://github.com/decred/dcrdex/pull/555), and [notify all](https://github.com/decred/dcrdex/pull/534) (bcast)
+- for orders with revoked (failed) matches, the order is automatically [unbooked](https://github.com/decred/dcrdex/pull/475) and the clients are notified
+- client's database scheme is now versioned, with an [upgrade](https://github.com/decred/dcrdex/pull/448) infrastructure for future changes
+- the client now automatically [resubscribes](https://github.com/decred/dcrdex/pull/503) to the order book feed after a reconnection with the server
+- client command line interface now provides the [order book](https://github.com/decred/dcrdex/pull/496)
+- client [prevents](https://github.com/decred/dcrdex/pull/527) accidental shutdown with active orders and swaps
+- client browser interface [polish](https://github.com/decred/dcrdex/pull/560)
 - numerous bug fixes and optimizations
-
-- { unbookHook for swapper: please translate to English or drop https://github.com/decred/dcrdex/pull/475 }
-- [smart fees](https://github.com/decred/dcrdex/pull/505): orders reserve enough for a "max fee rate" in case BTC fees are high when the order is filled, but the optimal network fee at match time is used for the swap contract transaction
-- server [ban](https://github.com/decred/dcrdex/pull/469) and [unban](https://github.com/decred/dcrdex/pull/479) endpoints
-- infrastructure for [upgrading](https://github.com/decred/dcrdex/pull/448) client database
-- multiple bug fixes, testing improvements, and UI tweaks
 
 [dcrandroid](https://github.com/planetdecred/dcrandroid):
 
